# gauchedroite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
lib/gdclient/: Cargo.toml
lib/gdclient/sql/: initialize_cache.sql
lib/gdclient/src/: client.rs  lib.rs  orientation.rs  payload.rs
lib/gdclient/src/cache/: mod.rs  sqlite.rs
src/: api.rs  cli.rs  main.rs
src/commands/: gauchedroite.rs  help.rs  mod.rs
